--- a/build.gradle
+++ b/build.gradle
@@ -12,20 +12,11 @@ repositories {
 dependencies {
     compile group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     compile group: 'org.json', name: 'json', version: '20160810'
 
-    compile group: 'org.apache.poi', name: 'poi', version: '3.12'
-    compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.12'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.12'
-
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
-
-    /*compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.0'*/
-    /*compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.0'*/
-    /*compile group: 'commons-configuration', name: 'commons-configuration', version: '1.10'*/
-    /*compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'*/
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.28'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
